--- a/main.css
+++ b/main.css
@@ -5,5 +5,18 @@
   z-index: -1;
 }
 
+@media (min-aspect-ratio: 16/9){
+  .size{
+    width: 100%;
+    height: auto;
+  }
+}
+
+@media (max-aspect-ratio: 16/9){
+  .size{
+    width: auto;
+    height: 100%;
+  }
+}
 
 
