--- a/main.css
+++ b/main.css
@@ -1,3 +1,16 @@
+.content h1{
+  font-size: 160px;
+  color: black;
+  font-weight: 600;
+  transitions: 0.5s;
+}
+.content h1{
+  -webkit-text-stroke: 2px #fff;
+  color: transparent;
+}
+
+
+
 .size{
   position: absolute;
   right: 0;
