--- a/main.css
+++ b/main.css
@@ -12,8 +12,13 @@
 
 
 .size{
-  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
+  position: fixed;
+  left: 0;
   right: 0;
+  top: 0;
   bottom: 0;
   z-index: -1;
 }
