--- a/main.css
+++ b/main.css
@@ -12,15 +12,8 @@
 
 
 .size{
-  width: 100vw;
-  height: 100vh;
-  object-fit: cover;
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  z-index: -1;
+  width: 1450px;
+  height: 500px;
 }
 
 @media (min-aspect-ratio: 16/9){
