--- a/main.css
+++ b/main.css
@@ -1,33 +1,32 @@
-.content h1{
+body, html {
+  margin:0;
+  padding: 0;
+}
+
+content h1{
   font-size: 160px;
   color: black;
   font-weight: 600;
   transitions: 0.5s;
 }
-.content h1{
+content h1{
   -webkit-text-stroke: 2px #fff;
   color: transparent;
 }
 
 
 
-.size{
-  width: 1450px;
-  height: 500px;
+video{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%)
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
 }
 
-@media (min-aspect-ratio: 16/9){
-  .size{
-    width: 100%;
-    height: auto;
-  }
-}
 
-@media (max-aspect-ratio: 16/9){
-  .size{
-    width: auto;
-    height: 100%;
-  }
-}
 
 
