--- a/main.css
+++ b/main.css
@@ -1,18 +1,18 @@
 
-content h1{
+.content h1{
   font-size: 160px;
   color: black;
   font-weight: 600;
   transitions: 0.5s;
 }
-content h1{
+.content h1{
   -webkit-text-stroke: 2px #fff;
   color: transparent;
 }
 
 
 
-video{
+.video{
   position: absolute;
   top: 50%;
   left: 50%;
