--- a/main.css
+++ b/main.css
@@ -1,27 +1,9 @@
-
-.content h1{
-  font-size: 160px;
-  color: black;
-  font-weight: 600;
-  transitions: 0.5s;
-}
-.content h1{
-  -webkit-text-stroke: 2px #fff;
-  color: transparent;
-}
-
-
-
-.video{
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%)
-  min-width: 100%;
-  min-height: 100%;
-  width: auto;
-  height: auto;
-}
+html { 
+  background: url(images/bg.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 
 
 
