--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-html { 
+.html { 
   background: url(galaxy.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -6,7 +6,7 @@ html {
   background-size: cover;
 }
 
-view {
+.view {
               position: relative;
               height: 50vh;
               text-align: center;
@@ -16,7 +16,7 @@ view {
               z-index = 1;
                
                       font-family: 'Syncopate', sans-serif;
-                      color: black;
+                      color: red;
                       text-transform: uppercase;
                       letter-spacing: 3vw;
                       line-height: 1.2;
